# kpo-hw4

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
crates/common/: Cargo.toml
crates/common/src/: db_utils.rs  events.rs  lib.rs  rabbit.rs  relay.rs  tables.rs
crates/common/src/accounts/: model.rs
crates/common/src/accounts/model/: dto.rs  mod.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: main.rs
crates/orders/: Cargo.toml
crates/orders/src/: api.rs  main.rs  worker.rs
crates/orders/src/model/: dto.rs  mod.rs
crates/payments/: Cargo.toml
crates/payments/src/: api.rs  main.rs  worker.rs
frontend/: Dockerfile  package.json
frontend/src/lib/: auth.ts
frontend/src/routes/: +page.svelte
frontend/src/routes/dashboard/: +layout.svelte
frontend/src/routes/dashboard/create/: +page.svelte
frontend/src/routes/dashboard/deposit/: +page.svelte
frontend/src/routes/dashboard/orders/: +page.svelte
