[workspace]
members = ["crates/common", "crates/gateway", "crates/orders", "crates/payments"]
resolver = "3"

[workspace.dependencies.serde]
version = "1.0.228"
features = ["derive"]

[workspace.dependencies.serde_json]
version = "1.0.147"

[workspace.dependencies.surrealdb]
version = "2.4.0"

[workspace.dependencies.tokio]
version = "1.48.0"
features = ["rt-multi-thread"]

[workspace.dependencies.macros]
git = "https://github.com/FlamyCat/kpo-hw3"
rev = "c80c9da"

[workspace.dependencies.lapin]
version = "3.7.2"

[workspace.dependencies.utoipa]
version = "5.4.0"
features = ["actix_extras"]

[workspace.dependencies.utoipa-swagger-ui]
version = "9.0.2"
features = ["actix-web", "reqwest"]

[workspace.dependencies.actix-web]
version = "4.12.1"

[workspace.dependencies.common]
path = "crates/common"