[package]
name = "orders"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
surrealdb.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
common.workspace = true
chrono.workspace = true
lapin.workspace = true
